--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     {
       id: 1,
       name: "SERVER SIDE ( area 51 [alpha]   )",
-      description: "Script server side do mapa area 51 [ ALPHA ] o script pode mudar mapa todo colocando textura travr serv  por audios entre outros...",
+      description: "Script server side do mapa area 51 [ ALPHA ] o script pode mudar mapa todo colocando textura travr serv  por audios entre outros...  creditos a KALIU CHEATS ",
       price: "R$ 30",
       img: "https://i.imgur.com/vBwoG1e.jpeg",
       contactLink: "https://wa.me/5533988612168?text=Olá,%20quero%20comprar%20o%20SERVER SIDE%20area 51 [alpha]"
