--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
       name: "BOT RAID : discord com painel",
       description: "Bot raid do discord com painel na web",
       price: "R$ 45",
-      img: ".",
+      img: "https://i.imgur.com/VJTz0FA.jpeg",
       contactLink: "https://wa.me/5533988612168?text=Olá,%20quero%20comprar%20o%20BOT%20RAID"
     }
   ];
