--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
       name: "Gojo Hub",
       description: "melhor hub privado do brookhaven mais poderoso de 2025",
       price: "R$ 37",
-      img: ".",
+      img: "https://i.imgur.com/0oUmvFH.png",
       contactLink: "https://wa.me/5533988612168?text=Olá,%20quero%20comprar%20o%20Gojo%20Hub"
     },
     {
