--- a/index.html
+++ b/index.html
@@ -454,6 +454,14 @@
       price: "R$ 45",
       img: "https://i.imgur.com/VJTz0FA.jpeg",
       contactLink: "https://wa.me/5533988612168?text=Olá,%20quero%20comprar%20o%20BOT%20RAID"
+    },
+    {
+      id: 6,
+      name: "Bot Ratware de telegram ",
+      description: "bot rat de telegram que pega ip porcentagem do celular e localizaçao exata por um site",
+      price: "R$ 50",
+      img: "https://i.imgur.com/vuCgd1X.jpeg",
+      contactLink: "https://wa.me/5533988612168?text=Olá,%20quero%20comprar%20o%20Ratware%20Bot Telegram"
     }
   ];
 
